--- a/_layouts/project.html
+++ b/_layouts/project.html
@@ -16,7 +16,7 @@ layout: default
     			<div class="project-img bordered" style="background-image: url('/static/projects/{{ i.image }}');"></div>
                 </a>
                 {% if i.url %} <a href="{{ i.url }}"> {% endif %}
-    			<h3 class="project-headlines">{{ i.name }}</h3>
+    			<h3 class="project-headlines"><a href="#">{{ i.name }}</a></h3>
     			{% if i.url %} </a> {% endif %}
     			<div class="project-content">
     				<div class="tag-holder">
